envoy-gateway-resources/gateway-internet.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internet
spec:
  gatewayClassName: internet
  addresses:
    - type: IPAddress
      value: 10.43.64.2
  listeners:
    - name: http
      protocol: HTTP
      port: 80
