envoy-gateway-resources/gateway-private.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: private
  addresses:
    - type: IPAddress
      value: 10.43.64.10
  listeners:
    - name: wildcard-desertbluffs-com-https
      protocol: HTTPS
      hostname: "*.desertbluffs.com"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-desertbluffs-com-cert
            group: ""
    - name: wildcard-radoncanyon-com-https
      protocol: HTTPS
      hostname: "*.radoncanyon.com"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-radoncanyon-com-cert
            group: ""
